feat: allow deletion of suspended restaurants
